--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,7 +1,14 @@
-<form action="/signin" method="post">
-	<input type="text" name="mail" placehoder="email"><br>
-	<input type="password" name="password" placehoder="password"><br>
-	<!--input type="password" name="password_confirmation" placehoder="Once more"><br-->
-	<input type="submit" value="Register">
-</form>
-
+<div>
+	<form action="/signin" method="post">
+		<div>
+			<div>
+				<input type="text" name="mail" placeholder="email"><br>
+				<input type="password" name="password" placeholder="password"><br>
+				<!--input type="password" name="password_confirmation" placehoder="Once more"><br-->
+			</div>
+			<div>
+				<input type="submit" value="Register">
+			</div>
+		</div>
+	</form>
+</div>
