--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,8 +1,16 @@
-<form action="signup" method="post">
-	<input type="text" name="mail" placeholder="mail"><br>
-	<input type="text" name="name" placeholder="name"><br>
-	<input type="text" name="idsearch" placeholder="search_id"><br>
-	<input type="password" name="password" placeholder="password"><br>
-	<input type="password" name="password_confirmation" placeholder="Once more"><br>
-	<input type="submit" value="Register">
-</form>
+<div>
+	<form action="signup" method="post">
+		<div>
+			<div>
+				<input type="text" name="mail" placeholder="mail"><br>
+				<input type="text" name="name" placeholder="name"><br>
+				<input type="text" name="idsearch" placeholder="search_id"><br>
+				<input type="password" name="password" placeholder="password"><br>
+				<input type="password" name="password_confirmation" placeholder="Once more"><br>
+			</div>
+			<div>
+				<input type="submit" value="Register">
+			</div>
+		</div>
+	</form>
+</div>
