--- a/views/room.erb
+++ b/views/room.erb
@@ -1,13 +1,21 @@
 <div>
 	<h2><%= @namerooms.roomname %></h2>
-	<form action="/message_body/<%= @namerooms.id %>" method="post">
+	<form action="/new/message" method="post">
 		<div>
 			<div>
-				<input type="text" name="message">
+				<input type="text" name="body">
 			</div>
 			<div>
 				<input type="submit" value="Transmission">
 			</div>
 		</div>
 	</form>
+	<div>
+		<% @message.each do |message| %>
+			<ul>
+				<li><%= message.username %></li>
+				<li><%= message.body %></li>
+			</ul>
+		<% end %>
+	</div>
 </div>
