--- a/views/room.erb
+++ b/views/room.erb
@@ -6,12 +6,17 @@
 				<input type="text" name="body">
 			</div>
 			<div>
+				<input type="hidden" name="room_id" value="<%= @namerooms.id %>">
+			</div>
+			<div>
+				<input type="hidden" name="username" value="<%= @user.id%>">
+			<div>
 				<input type="submit" value="Transmission">
 			</div>
 		</div>
 	</form>
 	<div>
-		<% @message.each do |message| %>
+		<% @message.order('id DESC').each do |message| %>
 			<ul>
 				<li><%= message.username %></li>
 				<li><%= message.body %></li>
