--- a/views/room.erb
+++ b/views/room.erb
@@ -11,7 +11,7 @@
 			<div>
 				<input type="hidden" name="username" value="<%= @user.id%>">
 			<div>
-				<input type="submit" value="Transmission">
+				<input type="submit" value="send">
 			</div>
 		</div>
 	</form>
