--- a/views/list_user.erb
+++ b/views/list_user.erb
@@ -12,7 +12,7 @@
 		-------------------------------------------------------
 		<% @friends.each do |friend| %>
 			<ul>
-				<li><a href="/oneroom/<%= friend.id %>"><%= friend.name %></a></li>
+				<li><a href="/privateroom/<%= friend.id %>"><%= friend.name %></a></li>
 			</ul>
 		<% end %>
 	</div>
